--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,12 @@
 name: build-static
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  repository_dispatch:
+  workflow_dispatch:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
 
 jobs:
 
